fix: phone size wrap

--- a/src/app/carvecalc/carvecalc.component.scss
+++ b/src/app/carvecalc/carvecalc.component.scss
@@ -28,6 +28,9 @@
   align-items: center;
 }
 
+.table-container {
+  min-width: fit-content;
+}
 @media screen and (max-width: 600px) {
   .buttonWrapper {
     display: flex;
